@@ -1,3 +1,7 @@
+* 2012-06-18 - thorben.betten@open-xchange.com
+
+- Fix for bug 22319: Support for IDN domains in IMAP authentication bundle
+
 * 2012-06-17 - thorben.betten@open-xchange.com
 
  - Fix for bug 21882: Update task to apply suggested changes to database schema
